--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
 	<meta property="og:image" content="http://placehold.it/350x350" />
 
 	<!-- favicons for page -->
-	<link rel='shortcut icon' type='image/vnd.microsoft.icon' href='img/favicon.ico'>
-	<link rel='apple-touch-icon' type='image/png' href='img/favicon.png'> <!-- iPhone -->
-	<link rel='icon' type='image/png' href='img/favicon.png'> <!-- others when ico can be setted -->
+	<link rel='shortcut icon' type='image/vnd.microsoft.icon' href='img/logo_mandir.ico'>
+	<link rel='apple-touch-icon' type='image/png' href='img/logo_mandir.png'> <!-- iPhone -->
+	<link rel='icon' type='image/png' href='img/logo_mandir.png'> <!-- others when ico can be setted -->
 
 	<!-- CSS FILES -->
 	<link rel="stylesheet" href="css/bootstrap.min.css" type="text/css">
@@ -133,7 +133,7 @@
 </div>
 
 
-	<!-- SECTION reviews title -->
+	<!-- SECTION STUDY GROUPS  -->
 	<div class='s7 overflow' id='s2'>
 		<div class='s7-pattern '>
 			<div id='section-7' class='container'>
@@ -151,358 +151,31 @@
 			</div>
 		</div>
 	</div>
-	<!-- END SECTION reviews -->
+	<!-- END SECTION STUDY GROUPS -->
 
-
-	<!-- SECTION reviews -->
-	<div class='s8 overflow' id='s8'>
-		<div class='s8-pattern '>
-			<div id='section-8' class='container'>
-
-				<!-- main row start -->
-				<div class='row'>
-					<!-- col-md-12 start-->
-					<div class='col-md-12 text-center' data-sr>
-						<!-- owl-reviews container -->
-						<div class='owl-reviews'>
-
-							<!-- owl item -->
-							<div class='item'>
-								<!-- owl item -->
-								<div class='row'>
-									<!-- review item -->
-									<div class='col-md-6 s8-item-middle'>
-										<div class='row'>
-											<div class='col-md-12 s8-item-content'>
-												<!-- arrow on bottom of box -->
-												<div class='arrow-down'></div>
-												<!-- end arrow on bottom of box -->
-												<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur <b>tristique lectus ex</b>, ac eleifend purus convallis ac. Sed fermentum sed ante sed malesuada.</p>
-											</div>
-										</div>
-
-										<!-- content with person image -->
-										<div class='row'>
-											<div class='col-md-12 s8-person'>
-												<img src='img/persons/person2.jpg' alt='image'>
-												<p>
-													<span class='person-name'>JOHN SMITH</span>
-													<span class='person-title'>Company Manager</span>
-												</p>
-											</div>
-										</div>
-									</div>
-
-								<!-- end review item -->
-
-								<!-- review item -->
-
-									<div class='col-md-6 s8-item-right'>
-										<div class='row'>
-											<div class='col-md-12 s8-item-content'>
-												<!-- arrow on bottom of box -->
-												<div class='arrow-down'></div>
-												<!-- end arrow on bottom of box -->
-												<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur <b>tristique lectus ex</b>, ac eleifend purus convallis ac. Sed fermentum sed ante sed malesuada.</p>
-											</div>
-										</div>
-										<!-- content with person image -->
-										<div class='row'>
-											<div class='col-md-12 s8-person'>
-												<img src='img/persons/person1.jpg' alt='image'>
-												<p>
-													<span class='person-name'>JOHN SMITH</span>
-													<span class='person-title'>Marketing Specialist</span>
-												</p>
-											</div>
-										</div>
-										<!-- end content with person image -->
-									</div>
-									<!-- end review item -->
-								</div>
-								<!-- end owl item -->
-							</div>
-							<!-- owl item -->
-
-							<!-- owl item -->
-							<div class='item'>
-								<!-- review item row -->
-								<div class='row'>
-									<div class='col-md-6 s8-item-middle'  >
-										<div class='row'>
-											<div class='col-md-12 s8-item-content'>
-												<!-- arrow on bottom of box -->
-												<div class='arrow-down'></div>
-												<!-- end arrow on bottom of box -->
-												<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur <b>tristique lectus ex</b>, ac eleifend purus convallis ac. Sed fermentum sed ante sed malesuada.</p>
-											</div>
-										</div>
-
-										<!-- content with person image -->
-										<div class='row'>
-											<div class='col-md-12 s8-person'>
-												<img src='img/persons/person2.jpg' alt='image'>
-												<p>
-													<span class='person-name'>JOHN SMITH</span>
-													<span class='person-title'>Company Manager</span>
-												</p>
-											</div>
-										</div>
-										<!-- end content with person image -->
-									</div>
-									<!-- end review item -->
-
-
-									<!-- review item -->
-									<div class='col-md-6 s8-item-right'  >
-										<div class='row'>
-											<div class='col-md-12 s8-item-content'>
-												<!-- arrow on bottom of box -->
-												<div class='arrow-down'></div>
-												<!-- end arrow on bottom of box -->
-												<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur <b>tristique lectus ex</b>, ac eleifend purus convallis ac. Sed fermentum sed ante sed malesuada.</p>
-											</div>
-										</div>
-
-										<!-- content with person image -->
-										<div class='row'>
-											<div class='col-md-12 s8-person'>
-												<img src='img/persons/person1.jpg' alt='image'>
-												<p>
-													<span class='person-name'>JOHN SMITH</span>
-													<span class='person-title'>Marketing Specialist</span>
-												</p>
-											</div>
-										</div>
-										<!-- end content with person image -->
-									</div>
-									<!-- end review item -->
-								</div>
-								<!-- end review item row -->
-							</div>
-							<!-- end owl item -->
-
-						</div>
-						<!-- owl-reviews container -->
-					</div><!-- end main row -->
-					<!-- col-md-12 start -->
-				</div>
-				<!-- main row start -->
-			</div>
-		</div>
-	</div>
-
-
-
-	<!-- SECTION LOGOTYPES title -->
-	<div class='s9 overflow' id='s9'>
-		<div class='s9-pattern'>
-			<div id='section-9' class='container'>
-
-				<div class='s9-title-container text-center' data-sr>
-					<div class='section-top-divider upper'>clients</div>
-					<div class='s9-title-big'>We Work For The Best</div>
-					<div class="i-separator">05</div>
-					<div class='row'>
-						<div class='col-md-8 col-md-offset-2 s9-title-small'>Lorem ipsum dolor sit amet, <span>consectetur</span> adipisicing elit, sed do eiusmod tempor incididunt <span>ut labore</span> et dolore magna aliqua.</div>
-					</div>
-				</div>
-
-			</div>
-		</div>
-	</div>
-	<!-- END SECTION LOGOTYPES title -->
-
-
-
-	<!-- SECTION BOTTOM 2 -->
-	<div class='s1-bottom-2' id='s1-3'>
-		<div class='s1-bottom-pattern-2'>
-			<div id='section-1-bottom-3' class='container-fluid nopadding'  data-sr='wait 0.2s then over 1.3s'>
-				<div class='row'>
-					<div class='col-md-12 s1-col-bottom-2 text-center'>
-						<div class='s1-col-bottom-span-2'>
-							<p>Quomodo is a design oriented and <span>UX focused theme</span> consectetur adipiscing elit design oriented</p>
-							<a href='' class='btn btn-s2-2 fadeButton upper'>OK, BUY IT NOW</a>
-						</div>
-					</div>
-				</div>
-			</div>
-		</div>
-	</div>
-	<!-- END SECTION BOTTOM 2  -->
-
-
-
-
-	<!-- SECTION FAQ title -->
-	<div class='s13 overflow' id='s13'>
+	<!-- SECTION LOCATION AND TIME -->
+	<div class='s13 overflow' id='s3'>
 		<div class='s13-pattern'>
 			<div id='section-13' class='container'>
 
 				<div class='s13-title-container text-center' data-sr>
-					<div class='section-top-divider upper'>f.a.q</div>
-					<div class='s13-title-big'>Frequently Asked Questions</div>
-					<div class="i-separator">07</div>
+					<div class='section-top-divider upper'>Location &amp; Time</div>
+					<div class='s13-title-big'>Every Saturday , 2.30 PM - 4.30 PM</div>
+					<div class='s13-title-small'>Starting from 12th November 2016</div>
 					<div class='row'>
-						<div class='col-md-8 col-md-offset-2 s13-title-small'>Lorem ipsum dolor sit amet, <span>consectetur</span> adipisicing elit, sed do eiusmod tempor incididunt <span>ut labore</span> et dolore magna aliqua.</div>
+						<div class='col-md-8 col-md-offset-2 s13-title-other'>
+							Gujarati School Classrooms
+						</div>
+						<div class='col-md-8 col-md-offset-2 s13-title-small'>
+							Shree Swaminarayan Temple Willesden
+						</div>
 					</div>
 				</div>
 
 			</div>
 		</div>
 	</div>
-	<!-- END SECTION FUN FACTS title -->
-
-
-
-	<!-- SECTION frequently asked questions -->
-	<div class='s14 overflow' id='s14'>
-		<div class='s14-pattern'>
-			<div id='section-14' class='container'>
-
-				<div class='row'>
-					<!-- container for all panels -->
-					<div class='col-md-12 s14-container text-center' data-sr>
-						<div class='row'>
-							<!-- container for left panels -->
-							<div class='col-md-6'>
-								<!-- left panels -->
-								<div class="panel-group" id="accordion">
-
-								  <!-- panel -->
-								  <div class="panel panel-default">
-								    <div class="panel-heading">
-								      <h4 class="panel-title">
-								        <a data-toggle="collapse" data-parent="#accordion" href="#collapseOne">
-								          Why I should buy it
-								        </a>
-								      </h4>
-								    </div>
-								    <div id="collapseOne" class="panel-collapse collapse ">
-								      <div class="panel-body">
-								        Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf moon officia aute, non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum eiusmod. Brunch 3 wolf moon tempor, sunt aliqua put a bird on it squid single-origin coffee nulla assumenda shoreditch et. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident. Ad vegan excepteur butcher vice lomo. Leggings occaecat craft beer farm-to-table, raw denim aesthetic synth nesciunt you probably haven't heard of them accusamus labore sustainable VHS.
-								      </div>
-								    </div>
-								  </div>
-								  <!-- end panel -->
-
-								  <!-- panel -->
-								  <div class="panel panel-default">
-								    <div class="panel-heading">
-								      <h4 class="panel-title">
-								        <a data-toggle="collapse" data-parent="#accordion" href="#collapseTwo">
-								          Is this premium item?
-								        </a>
-								      </h4>
-								    </div>
-								    <div id="collapseTwo" class="panel-collapse collapse">
-								      <div class="panel-body">
-								        Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf moon officia aute, non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum eiusmod. Brunch 3 wolf moon tempor, sunt aliqua put a bird on it squid single-origin coffee nulla assumenda shoreditch et. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident. Ad vegan excepteur butcher vice lomo. Leggings occaecat craft beer farm-to-table, raw denim aesthetic synth nesciunt you probably haven't heard of them accusamus labore sustainable VHS.
-								      </div>
-								    </div>
-								  </div>
-								  <!-- end panel -->
-
-								  <!-- panel -->
-								  <div class="panel panel-default">
-								    <div class="panel-heading">
-								      <h4 class="panel-title">
-								        <a data-toggle="collapse" data-parent="#accordion" href="#collapseThree">
-								          How well documentation is?
-								        </a>
-								      </h4>
-								    </div>
-								    <div id="collapseThree" class="panel-collapse collapse">
-								      <div class="panel-body">
-								        Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf moon officia aute, non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum eiusmod. Brunch 3 wolf moon tempor, sunt aliqua put a bird on it squid single-origin coffee nulla assumenda shoreditch et. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident. Ad vegan excepteur butcher vice lomo. Leggings occaecat craft beer farm-to-table, raw denim aesthetic synth nesciunt you probably haven't heard of them accusamus labore sustainable VHS.
-								      </div>
-								    </div>
-								  </div>
-								  <!-- end panel -->
-
-								</div>
-								<!-- end left panels -->
-							</div>
-							<!-- end left container for panels -->
-
-							<!-- right container for panels -->
-							<div class='col-md-6'>
-								<!-- right panels group -->
-								<div class="panel-group" id="accordion-2">
-									<!-- panel -->
-									  <div class="panel panel-default">
-									    <div class="panel-heading">
-									      <h4 class="panel-title">
-									        <a data-toggle="collapse" data-parent="#accordion-2" href="#collapseOne-2">
-									          Why I should buy account on Your site
-									        </a>
-									      </h4>
-									    </div>
-									    <div id="collapseOne-2" class="panel-collapse collapse ">
-									      <div class="panel-body">
-									        Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf moon officia aute, non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum eiusmod. Brunch 3 wolf moon tempor, sunt aliqua put a bird on it squid single-origin coffee nulla assumenda shoreditch et. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident. Ad vegan excepteur butcher vice lomo. Leggings occaecat craft beer farm-to-table, raw denim aesthetic synth nesciunt you probably haven't heard of them accusamus labore sustainable VHS.
-									      </div>
-									    </div>
-									  </div>
-									  <!-- end panel -->
-
-									  <!-- panel -->
-									  <div class="panel panel-default">
-									    <div class="panel-heading">
-									      <h4 class="panel-title">
-									        <a data-toggle="collapse" data-parent="#accordion-2" href="#collapseTwo-2">
-									          Dark Landing Page for My?
-									        </a>
-									      </h4>
-									    </div>
-									    <div id="collapseTwo-2" class="panel-collapse collapse">
-									      <div class="panel-body">
-									        Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf moon officia aute, non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum eiusmod. Brunch 3 wolf moon tempor, sunt aliqua put a bird on it squid single-origin coffee nulla assumenda shoreditch et. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident. Ad vegan excepteur butcher vice lomo. Leggings occaecat craft beer farm-to-table, raw denim aesthetic synth nesciunt you probably haven't heard of them accusamus labore sustainable VHS.
-									      </div>
-									    </div>
-									  </div>
-									  <!-- end panel -->
-
-									  <!-- panel -->
-									  <div class="panel panel-default">
-									    <div class="panel-heading">
-									      <h4 class="panel-title">
-									        <a data-toggle="collapse" data-parent="#accordion-2" href="#collapseThree-3">
-									          Full Responsive or not?
-									        </a>
-									      </h4>
-									    </div>
-									    <div id="collapseThree-3" class="panel-collapse collapse">
-									      <div class="panel-body">
-									        Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf moon officia aute, non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum eiusmod. Brunch 3 wolf moon tempor, sunt aliqua put a bird on it squid single-origin coffee nulla assumenda shoreditch et. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident. Ad vegan excepteur butcher vice lomo. Leggings occaecat craft beer farm-to-table, raw denim aesthetic synth nesciunt you probably haven't heard of them accusamus labore sustainable VHS.
-									      </div>
-									    </div>
-									  </div>
-									  <!-- end panel -->
-									</div>
-									<!-- end right panels -->
-								</div>
-							<!-- end container for panels -->
-						</div>
-						<!-- end container for all panels -->
-					</div><!-- end rows for all-->
-				</div>
-			</div>
-		</div>
-	</div>
-	<!-- END SECTION frequently asked questions -->
-
-
-	<!-- SECTION Register -->
-<div id="s4">
-		<!-- Change the width and height values to suit you best -->
-<div class="typeform-widget" data-url="https://sstwstudygroups.typeform.com/to/JbkTEW" data-text="Registration Form" style="width:100%;height:500px;"></div>
-<script>(function(){var qs,js,q,s,d=document,gi=d.getElementById,ce=d.createElement,gt=d.getElementsByTagName,id='typef_orm',b='https://s3-eu-west-1.amazonaws.com/share.typeform.com/';if(!gi.call(d,id)){js=ce.call(d,'script');js.id=id;js.src=b+'widget.js';q=gt.call(d,'script')[0];q.parentNode.insertBefore(js,q)}})()</script>
-<div style="font-family: Sans-Serif;font-size: 12px;color: #999;opacity: 0.5; padding-top: 5px;"><a href="https://www.typeform.com/examples/forms/registration-form-template/?utm_campaign=JbkTEW&amp;utm_source=typeform.com-4840846-Basic&amp;utm_medium=typeform&amp;utm_content=typeform-embedded-registrationform&amp;utm_term=EN" style="color: #999" target="_blank"></a></div>
-</div>
-
-	<!-- END SECTION contact -->
+	<!-- END SECTION LOCATION AND TIME  -->
 
 	<!-- google map setted in main.js with google maps api v3 -->
 	<div id="gmap"></div>
@@ -510,6 +183,19 @@
 
 	<!-- google maps api -->
 	<script src="http://maps.google.com/maps/api/js?sensor=false" type="text/javascript"></script>
+
+	<!-- SECTION Register -->
+<div id="s4">
+	<figure>
+		<!-- Change the width and height values to suit you best -->
+<div class="typeform-widget" data-url="https://sstwstudygroups.typeform.com/to/JbkTEW" data-text="Registration Form" style="width:100%;height:500px;"></div>
+<script>(function(){var qs,js,q,s,d=document,gi=d.getElementById,ce=d.createElement,gt=d.getElementsByTagName,id='typef_orm',b='https://s3-eu-west-1.amazonaws.com/share.typeform.com/';if(!gi.call(d,id)){js=ce.call(d,'script');js.id=id;js.src=b+'widget.js';q=gt.call(d,'script')[0];q.parentNode.insertBefore(js,q)}})()</script>
+<div style="font-family: Sans-Serif;font-size: 12px;color: #999;opacity: 0.5; padding-top: 5px;"><a href="https://www.typeform.com/examples/forms/registration-form-template/?utm_campaign=JbkTEW&amp;utm_source=typeform.com-4840846-Basic&amp;utm_medium=typeform&amp;utm_content=typeform-embedded-registrationform&amp;utm_term=EN" style="color: #999" target="_blank"></a></div>
+	</figure>
+</div>
+
+	<!-- END SECTION contact -->
+
 
 	<!-- jQuery plugins and main.js file for initialization -->
 	<script type="text/javascript" src="js/jquery-1.11.1.min.js"></script>
