--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
 	<!-- end google map setted in main.js with google maps api v3 -->
 
 	<!-- google maps api -->
-	<script src="http://maps.google.com/maps/api/js?sensor=false" type="text/javascript"></script>
+	<script src="http://maps.google.com/maps/api/js?key=AIzaSyDGJ2uv7fDrfYojxgVE-OLu2Q4TG1xXCfM&sensor=false" type="text/javascript"></script>
 
 	<!-- SECTION Register -->
 <div id="s4">
