--- a/index.html
+++ b/index.html
@@ -141,10 +141,27 @@
 				<!-- section title -->
 				<div class='s7-title-container text-center' data-sr>
 					<div class='section-top-divider upper'>Study Groups</div>
-					<div class='s7-title-big'>Yes, Test McTestFace is the shit </div>
+					<div>
+					<h2 class='s7-title-big'>GCSE</h2>
 					<div class='row'>
-						<div class='col-md-8 col-md-offset-2 s7-title-small'>Lorem <span>ipsum dolor</span> sit amet, consectetur adipisicing elit, sed do <span>eiusmod tempor</span> incididunt ut labore et dolore magna aliqua.</div>
+						<div class='col-md-8 col-md-offset-2'>
+							<ul>
+								<li class='s7-title-small'>Mathematics</li>
+								<li class='s7-title-small'>Biology</li>
+								<li class='s7-title-small'>Chemistry</li>
+								<li class='s7-title-small'>Physics</li>
+							</ul>
+						</div>
 					</div>
+					<h2 class='s7-title-big'>AS-LEVEL</h2>
+					<div class='row'>
+						<div class='col-md-8 col-md-offset-2'>
+							<ul>
+								<li class='s7-title-small'>Mathematics</li>
+							</ul>
+						</div>
+					</div>
+				</div>
 				</div>
 				<!-- end section titile -->
 
