--- a/index.html
+++ b/index.html
@@ -201,17 +201,29 @@
 	<!-- google maps api -->
 	<script src="http://maps.google.com/maps/api/js?key=AIzaSyDhd9PfI6EG4VK9vy22Ht_mRvg-MVi7W1c&sensor=false" type="text/javascript"></script>
 
-	<!-- SECTION Register -->
-<div id="s4">
-	<figure>
-		<!-- Change the width and height values to suit you best -->
-<div class="typeform-widget" data-url="https://sstwstudygroups.typeform.com/to/JbkTEW" data-text="Registration Form" style="width:100%;height:500px;"></div>
-<script>(function(){var qs,js,q,s,d=document,gi=d.getElementById,ce=d.createElement,gt=d.getElementsByTagName,id='typef_orm',b='https://s3-eu-west-1.amazonaws.com/share.typeform.com/';if(!gi.call(d,id)){js=ce.call(d,'script');js.id=id;js.src=b+'widget.js';q=gt.call(d,'script')[0];q.parentNode.insertBefore(js,q)}})()</script>
-<div style="font-family: Sans-Serif;font-size: 12px;color: #999;opacity: 0.5; padding-top: 5px;"><a href="https://www.typeform.com/examples/forms/registration-form-template/?utm_campaign=JbkTEW&amp;utm_source=typeform.com-4840846-Basic&amp;utm_medium=typeform&amp;utm_content=typeform-embedded-registrationform&amp;utm_term=EN" style="color: #999" target="_blank"></a></div>
-	</figure>
-</div>
 
-	<!-- END SECTION contact -->
+	<!-- SECTION SIGN UP -->
+	<div class='s7 overflow' id='s4'>
+		<div class='s7-pattern '>
+			<div id='section-7' class='container'>
+
+				<!-- section title -->
+				<div class='s7-title-container text-center' data-sr>
+					<div class='section-top-divider upper'>Sign Up</div>
+					<div>
+						<!-- Change the width and height values to suit you best -->
+					<div class="typeform-widget" data-url="https://sstwstudygroups.typeform.com/to/JbkTEW" data-text="Registration Form" style="width:100%;height:500px;"></div>
+					<script>(function(){var qs,js,q,s,d=document,gi=d.getElementById,ce=d.createElement,gt=d.getElementsByTagName,id='typef_orm',b='https://s3-eu-west-1.amazonaws.com/share.typeform.com/';if(!gi.call(d,id)){js=ce.call(d,'script');js.id=id;js.src=b+'widget.js';q=gt.call(d,'script')[0];q.parentNode.insertBefore(js,q)}})()</script>
+					<div style="font-family: Sans-Serif;font-size: 12px;color: #999;opacity: 0.5; padding-top: 5px;"><a href="https://www.typeform.com/examples/forms/registration-form-template/?utm_campaign=JbkTEW&amp;utm_source=typeform.com-4840846-Basic&amp;utm_medium=typeform&amp;utm_content=typeform-embedded-registrationform&amp;utm_term=EN" style="color: #999" target="_blank"> </a>  </div>
+
+
+					</div>
+					</div>
+				<!-- end section titile -->
+			</div>
+		</div>
+	</div>
+	<!-- END SIGN UP -->
 
 
 	<!-- jQuery plugins and main.js file for initialization -->
