--- a/index.html
+++ b/index.html
@@ -146,10 +146,10 @@
 					<div class='row'>
 						<div class='col-md-8 col-md-offset-2'>
 							<ul>
-								<li class='s7-title-small'>Mathematics</li>
-								<li class='s7-title-small'>Biology</li>
-								<li class='s7-title-small'>Chemistry</li>
-								<li class='s7-title-small'>Physics</li>
+								<ul class='s7-title-small'>Mathematics</ul>
+								<ul class='s7-title-small'>Biology</ul>
+								<ul class='s7-title-small'>Chemistry</ul>
+								<ul class='s7-title-small'>Physics</ul>
 							</ul>
 						</div>
 					</div>
@@ -157,7 +157,7 @@
 					<div class='row'>
 						<div class='col-md-8 col-md-offset-2'>
 							<ul>
-								<li class='s7-title-small'>Mathematics</li>
+								<ul class='s7-title-small'>Mathematics</ul>
 							</ul>
 						</div>
 					</div>
